fix: make heading bigger on small devices

--- a/src/components/sections/ImageListSectionRatio2_3.module.css
+++ b/src/components/sections/ImageListSectionRatio2_3.module.css
@@ -150,4 +150,7 @@
         position: relative;
         aspect-ratio: 570 / 1047;
     }
+    .listHeading {
+        font-size: var(--section-h2);
+    }
 }
